--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
