--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "start": "vite"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.16.6",
+    "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.26.0",
     "sanitize": "^2.1.2"
   },
   "devDependencies": {
