--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3",
     "sanitize": "^2.1.2",
+    "uuid": "^10.0.0",
     "vite": "^5.3.5"
   }
 }
