--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "recharts": "^2.12.7",
     "sanitize": "^2.1.2"
   },
   "devDependencies": {
