--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,20 @@
     "start": "vite"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/system": "^5.16.7",
+    "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "mdb-react-ui-kit": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "sanitize": "^2.1.2"
   },
@@ -35,6 +36,6 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.5"
+    "vite": "^5.4.0"
   }
 }
